* Fix: Due to the above issue, embeds/images in a rich text field would sometimes be saved into the database in their editor representation
* Fix: RoutablePage now prevents subpage_urls from being defined as a property, which would cause a memory leak
* Fix: Added validation to prevent pages being created with only whitespace characters in their title fields (Frank Wiles)


0.8.6 (10.03.2015)
~~~~~~~~~~~~~~~~~~
* Translations updated, including new translations for Czech, Italian and Japanese
* The "fixtree" command can now delete orphaned pages
* Fix: django-taggit library updated to 0.12.3, to fix a bug with migrations on SQLite on Django 1.7.2 and above (https://github.com/alex/django-taggit/issues/285)
* Fix: Fixed a bug that caused children of a deleted page to not be deleted if they had a different type


0.8.5 (17.02.2015)
~~~~~~~~~~~~~~~~~~
* Fix: On adding a new page, the available page types are ordered by the displayed verbose name
* Fix: Active admin submenus were not properly closed when activating another
* Fix: get_sitemap_urls is now called on the specific page class so it can now be overridden (Jerel Unruh)
* Fix: (Firefox and IE) Fixed preview window hanging and not refocusing when "Preview" button is clicked again
* Fix: Storage backends that return raw ContentFile objects are now handled correctly when resizing images (@georgewhewell)
* Fix: Punctuation characters are no longer stripped when performing search queries
* Fix: When adding tags where there were none before, it is now possible to save a single tag with multiple words in it
* Fix: richtext template tag no longer raises TypeError if None is passed into it (Alejandro Varas)
* Fix: Serving documents now uses a streaming HTTP response and will no longer break Django's cache middleware
* Fix: User admin area no longer fails in the presence of negative user IDs (as used by django-guardian's default settings)
* Fix: Password reset emails now use the ``BASE_URL`` setting for the reset URL